# DZ-YADRO

./: .dockerignore  .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  structure_search.py  topic1_titanic_eda.ipynb  topic2_titanic_visual.ipynb  topic3_sklearn.ipynb  Домашнее задание 3.ipynb  Домашнее задание 6.ipynb  Домашнее задание 7.ipynb  Символьное дифференцирование.ipynb
'github/workflows/: docker.yml
.github/workflows/: docker.yml  lint.yml  test.yml
Chemical_structure_search/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  structure_search.py
Chemical_structure_search/'github/workflows/: lint.yml
Chemical_structure_search/models/: smile.py
Chemical_structure_search/nginx/: default.conf
Chemical_structure_search/routers/: smiles.py
app/: .dockerignore  __init__.py  database.py  init_db.py  settings.py  structure_search.py
app/models/: smile.py
app/routers/: smiles.py
app/tests/: test_chem_structure.py
models/: smile.py
nginx/: default.conf
routers/: smiles.py
